--- a/src/style.css
+++ b/src/style.css
@@ -79,15 +79,15 @@ footer{
 
 section{
   padding: 20px;
-  align-items: center;
+  align-items: center; /*vertical*/
   display: block;
-  justify-content: center;
+  justify-content: center; /*horizontal*/
 }
 
 .botton{
   margin: 30px 0px;
   display: flex;
-  flex-direction: column;
+  flex-direction: column; 
   align-items: center;
 }
 
@@ -141,15 +141,15 @@ div, .select{
 
 /* Modal Window*/
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
+  display: none; 
+  position: fixed; 
   z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgba(0,0,0,0.5); 
 }
 
   .modal-content {
@@ -168,7 +168,7 @@ div, .select{
 .close {
   color: #D3FCCB;
   font-size: 28px;
-  font-weight: bold;
+  font-weight: bold; /*el gruesor y ancho negrita de la letra */
 }
 
 .close:hover, .close:focus {
